; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_ws2812_effects.c_ws2812_effects_set_color.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_ws2812_effects.c_ws2812_effects_set_color.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8** }

@state = common dso_local global %struct.TYPE_2__* null, align 8
@LIBRARY_NOT_INITIALIZED_ERROR_MSG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @ws2812_effects_set_color to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ws2812_effects_set_color(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %7 = load i32*, i32** %2, align 8
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** @state, align 8
  %9 = icmp ne %struct.TYPE_2__* %8, null
  %10 = zext i1 %9 to i32
  %11 = load i32, i32* @LIBRARY_NOT_INITIALIZED_ERROR_MSG, align 4
  %12 = call i32 @luaL_argcheck(i32* %7, i32 %10, i32 1, i32 %11)
  %13 = load i32*, i32** %2, align 8
  %14 = call i8* @luaL_checkinteger(i32* %13, i32 1)
  store i8* %14, i8** %3, align 8
  %15 = load i32*, i32** %2, align 8
  %16 = call i8* @luaL_checkinteger(i32* %15, i32 2)
  store i8* %16, i8** %4, align 8
  %17 = load i32*, i32** %2, align 8
  %18 = call i8* @luaL_checkinteger(i32* %17, i32 3)
  store i8* %18, i8** %5, align 8
  %19 = load i32*, i32** %2, align 8
  %20 = call i8* @luaL_optinteger(i32* %19, i32 4, i32 0)
  store i8* %20, i8** %6, align 8
  %21 = load i8*, i8** %3, align 8
  %22 = load %struct.TYPE_2__*, %struct.TYPE_2__** @state, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %22, i32 0, i32 0
  %24 = load i8**, i8*** %23, align 8
  %25 = getelementptr inbounds i8*, i8** %24, i64 0
  store i8* %21, i8** %25, align 8
  %26 = load i8*, i8** %4, align 8
  %27 = load %struct.TYPE_2__*, %struct.TYPE_2__** @state, align 8
  %28 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %27, i32 0, i32 0
  %29 = load i8**, i8*** %28, align 8
  %30 = getelementptr inbounds i8*, i8** %29, i64 1
  store i8* %26, i8** %30, align 8
  %31 = load i8*, i8** %5, align 8
  %32 = load %struct.TYPE_2__*, %struct.TYPE_2__** @state, align 8
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  %34 = load i8**, i8*** %33, align 8
  %35 = getelementptr inbounds i8*, i8** %34, i64 2
  store i8* %31, i8** %35, align 8
  %36 = load i8*, i8** %6, align 8
  %37 = load %struct.TYPE_2__*, %struct.TYPE_2__** @state, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %37, i32 0, i32 0
  %39 = load i8**, i8*** %38, align 8
  %40 = getelementptr inbounds i8*, i8** %39, i64 3
  store i8* %36, i8** %40, align 8
  ret i32 0
}

declare dso_local i32 @luaL_argcheck(i32*, i32, i32, i32) #1

declare dso_local i8* @luaL_checkinteger(i32*, i32) #1

declare dso_local i8* @luaL_optinteger(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
